--- a/app/Resources/views/article/index.html.twig
+++ b/app/Resources/views/article/index.html.twig
@@ -14,6 +14,13 @@
             </tr>
         </thead>
         <tbody>
+        
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         {% for article in articles %}
             <tr>
                 <td><a href="{{ path('admin_article_show', { 'id': article.id }) }}">{{ article.id }}</a></td>
