--- a/app/Resources/views/section/index.html.twig
+++ b/app/Resources/views/section/index.html.twig
@@ -3,7 +3,8 @@
 {% block body %}
     <h1>Sections list</h1>
 
-    <table>
+    <table class="table table-hover table-bordered">
+
         <thead>
             <tr>
                 <th>Id</th>
