--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,15 +2,13 @@
 
 {% block body %}
         <tbody>
-    <table>
-        <tr>
-            <th>Articles</th>
-        </tr>
-        <tr>
+    <table class="table table-hover table-bordered">
+
+    <tr>
             {% for i in sections %}
-            <td><a href="{{ path("sections",{'id':i.id}) }}"> {{ i.thetitle }} </a> - </td>
+                <td><a href="{{ path("sections",{'id':i.id}) }}"> {{ i.thetitle }} </a></td>
             {% endfor %}
-        </tr>
+    </tr>
 
         <h1>Articles</h1>
     </table>
